--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,14 @@ path = "src/main.rs"
 
 [dependencies]
 axum = "0.5.1"
+chrono = "0.4.19"
+config = "0.13.1"
 hyper = "0.14.18"
+serde = { version = "1.0.136", features = ["derive"] }
+sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"], default-features = false }
 tokio = { version = "1.17.0", features = ["full"] }
+uuid = { version = "0.8.2", features = ["v4"] }
+validator = { version = "0.14.0", features = ["derive"] }
 
 [dev-dependencies]
 tower = { version = "0.4.12", features = ["util"] }
