--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 path = "src/lib.rs"
 
 [[bin]]
-name = "zero2prod"
+name = "axum-zero2prod"
 path = "src/main.rs"
 
 [dependencies]
@@ -17,9 +17,13 @@ axum = "0.5.1"
 chrono = "0.4.19"
 config = "0.13.1"
 hyper = "0.14.18"
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.136", features = ["derive"] }
 sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"], default-features = false }
 tokio = { version = "1.17.0", features = ["full"] }
+tower-http = { version = "0.2.5", features = ["trace"] }
+tracing = "0.1.34"
+tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
 uuid = { version = "0.8.2", features = ["v4"] }
 validator = { version = "0.14.0", features = ["derive"] }
 
