--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,25 @@ config = "0.13.1"
 hyper = "0.14.18"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.136", features = ["derive"] }
-sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"], default-features = false }
 tokio = { version = "1.17.0", features = ["full"] }
 tower-http = { version = "0.2.5", features = ["trace"] }
 tracing = "0.1.34"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
 uuid = { version = "0.8.2", features = ["v4"] }
 validator = { version = "0.14.0", features = ["derive"] }
+
+[dependencies.sqlx]
+version = "0.5.13"
+default-features = false
+features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
+    "offline"
+]
 
 [dev-dependencies]
 tower = { version = "0.4.12", features = ["util"] }
