--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tracing = "0.1.34"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
 uuid = { version = "0.8.2", features = ["v4"] }
 validator = { version = "0.14.0", features = ["derive"] }
+serde-aux = "3.0.1"
 
 [dependencies.sqlx]
 version = "0.5.13"
